--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    
     "moment": "^2.30.1",
     "quill": "^2.0.3",
     "react": "^18.2.0",
