--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
-    
     "moment": "^2.30.1",
     "quill": "^2.0.3",
     "react": "^18.2.0",
@@ -14,7 +13,8 @@
     "react-easy-crop": "^5.2.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-stockcharts": "^0.7.8"
   },
   "scripts": {
     "start": "react-scripts start",
