--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ REACT_APP_REQUEST_BASE_URL=http://localhost:5000/api/v1
 
 //LiveFeed Host
 REACT_APP_LIVEFEED_BASE_URL = 'wss://masterswift-beta.mastertrust.co.in/ws/v1/feeds?access_token=qaoSOB-l4jmwXlxlucY4ZTKWsbecdrBfC7GoHjCRy8E.soJkcdbrMmew-w1C0_KZ2gcQBUPLlPTYNbt9WLJN2g8'
+
+//Historical Chart Data Host
+REACT_APP_HISTORICAL_BASE_URL = 'https://masterswift.mastertrust.co.in/api/v1/charts/tdv'
